--- a/webpack-4-simple/src/style.scss
+++ b/webpack-4-simple/src/style.scss
@@ -4,3 +4,12 @@ body {
   font-size: 3em;
   color: $main-fore-color;
 }
+.example {
+  display: grid;
+  transition: all .5s;
+  user-select: none;
+  background: linear-gradient(to bottom, white, black);
+}
+.box {
+  box-sizing: border-box;
+}
